.metadata/.plugins/org.eclipse.cdt.ui/goo.build.log
20:53:55 **** Incremental Build of configuration Debug for project goo ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\goo.o" "..\\src\\goo.cpp" 
..\src\goo.cpp: In function 'int main()':
..\src\goo.cpp:13:37: error: expected '}' at end of input
  cout << "!!!Hello World!!!" << endl; // prints !!!Hello World!!!
                                     ^

20:53:56 Build Finished (took 182ms)

